2010-08-06 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_boxc.c: fixed security issue that box-[allow|deny]-ip options were
      ignored for smsbox. This fixes #188.
      Thanks to Roland Discein for patch.

2010-08-05 Alexander Malysh <amalysh at kannel.org>
    * bootstrap.sh: changed to /bin/sh bacase e.g. FreeBSD has bash in /usr/local/bin.
      Thanks to Victor Luchitz <vluchits at gmail.com> for the hint.

2010-07-28 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr.[ch], gw/dlr_mem.c, gw/dlr_mssql.c, gw/dlr_mysql.c, gw/dlr_oracle.c, gw/dlr_p.h
      gw/dlr_pgsql.c, gw/dlr_sdb.c, gw/smsc/smsc_at.c, gw/smsc/smsc_cgw.c, gw/smsc/smsc_cimd2.c,
      gw/smsc/smsc_emi.c, gw/smsc/smsc_fake.c, gw/smsc/smsc_http.c, gw/smsc/smsc_oisd.c,
      gw/smsc/smsc_smpp.c, gw/smsc/smsc_soap.c: applied patch that adds last 7 digits from destination
      to DB queries for DLR support. It reduces possibility to get wrong DLR for e.g. EMI.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-06-04 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: clear privdata afetr read error to get clean status
      for reconnect.This fixes #544.
      Thanks to <anping.qiao at gmail.com> for patch and bugreport.

2010-05-31 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_oisd.c: applied patch that allows empty MOs.
      Thanks to Michael Zervakis <michael at zervakis.com> for this patch.

2010-05-14  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.c: fixed missing foreign ID (FID) escape codes handling for 
      DLR SMSC SUCCESS|FAIL events, due that we handle the last chunk here, we
      didn't get hold of the FID. We need to duplicate it to the split list 
      original too, in order to have it available later, when the last chunk 
      us handled for the DLR events.
      Thanks to Gianluca Moretti <gianluca.moretti at hotmail dot it> for report.

2010-05-06 Alexander Malysh <amalysh at kannel.org>