@@ -1,3 +1,8 @@
+2010-09-01 Alexander Malysh <amalysh at kannel.org>
+    * doc/userguide/userguide.xml, gw/urltrans.c: Fixed bug that keyword-regex
+      was case insensitive.
+      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.
+
 2010-08-06 Alexander Malysh <amalysh at kannel.org>
     * gw/bb_boxc.c: fixed security issue that box-[allow|deny]-ip options were
       ignored for smsbox. This fixes #188.
